# triangles

./: LICENSE  README.md  setup.cfg
triangles/: setup.cfg
triangles/src/: __init__.py
triangles/src/triangles/: __init__.py  triangles.py
