[metadata]
name = triangles
version = 1.0.0
author = Hemendu Roy
author_email = hemenduroy@yahoo.com
url = https://github.com/placeholder
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = MIT License
license_files = LICENSE
description = A solver for triangle sides and angles
long_description = file: README.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
